{
    "name": "PlayerControl",
    "maps": [
        {
            "name": "Player",
            "id": "0d2d1693-3b39-4984-bbf6-25cad06c294c",
            "actions": [
                {
                    "name": "MovUp",
                    "type": "Button",
                    "id": "f2b32e43-4efd-4ac1-acfe-e68dbaadaecd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MovDown",
                    "type": "Button",
                    "id": "1a44e7be-2567-444e-aedc-d004cfa4e196",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MovLeft",
                    "type": "Button",
                    "id": "51c58b46-7354-4839-bcaf-769337860001",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MovRight",
                    "type": "Button",
                    "id": "86595921-37f5-42c8-8150-d056a2ba9010",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "3f4b0cd2-fa92-4ac4-a3bd-1aa2a400788e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c3a53281-a0bf-47ca-9db9-c09b4d91544c",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5f95bdf1-f2a9-4f85-ac89-10ae29384be6",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9076afed-668e-49a7-9c48-a96389352e4d",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25b5a777-2454-4101-9d1c-f7ba076c914e",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b6642b87-9a50-4cf5-bea3-2aa718507051",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}